grl-source: fixed compare_queue_element function

Function should return 0 only when elements are equal.

compare_queue_element function was returning 0 every time qelement->media pointer was higher or equal media pointer (qelement->media < media).
It worked couple of times then failed, depends where memory was allocated.
When it failed, wrong element in BrowseRelayCb::queue was marked as ready (in media_ready_cb).
As a consequence grilo locked up not returning all elements in grl_source_browse call.

https://bugzilla.gnome.org/show_bug.cgi?id=689053